Fixed Position issues with SVG items and Time and Distance Visibility

--- a/frontend/src/components/Map.css
+++ b/frontend/src/components/Map.css
@@ -75,7 +75,7 @@
     justify-content: center;
     align-items: center;
     overflow: auto;
-    position: relative;
+    /*position: relative;*/
 }
 
 .absolute-svg {
